allow to filter rules by authorId and validated
